added possibility to edit mesh colors in textures tab

--- a/XPSRenominator/XPSRenominator.csproj
+++ b/XPSRenominator/XPSRenominator.csproj
@@ -21,4 +21,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="PixiEditor.ColorPicker" Version="3.3.1" />
+  </ItemGroup>
+
 </Project>
